tests/snapshots/examples_fixtures/hint_demos__invalid_lambda.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/hint_demos/invalid_lambda.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Lambda Arrow

I was expecting `->` after the lambda parameters, but I found `*`.

  examples/hint_demos/invalid_lambda.flx:5:15
  |
5 | let double = /x * 2;
  |               ^
  |               - this lambda parameter list ends here

Note:
  while parsing lambda expression

Help:
  Use `/x -> expr` or `/(x, y) -> expr`.
== stdout ==
<not executed>
